# ImageClass

igg_image/: readme.md
igg_image/src/: CMakeLists.txt  image.cpp  main.cpp
igg_image/src/igg_image/: CMakeLists.txt  image.h  main.cpp
igg_image/tests/: CMakeLists.txt  test_image.cpp
